--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,8 +25,8 @@
 <p><b>Phone:</b> 01884068059</p>
 
 
-<h4>Stay Connected</h4>
-<p>Stay up-to-date with the latest news, updates, and health tips by following us on social media. Connect with us on Facebook or Instagram to join our growing community.
+<!--<h4>Stay Connected</h4>-->
+<!--<p>Stay up-to-date with the latest news, updates, and health tips by following us on social media. Connect with us on Facebook or Instagram to join our growing community.-->
 </p>
 <h4>Location
 </h4>
